--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,10 +15,11 @@ body, html {
 }
 .wrapper {
     width: 1921px;
-    /* height: 100%; */
-    height: 4684px;
-    background-color: #ffffff;
+    height: 100%;
+    /* height: 4684px; */
     margin: 0 auto;
+    background-color: #ffffff;
+
 }
 .header {
     width: 1920px;
@@ -186,6 +187,10 @@ body, html {
     left: 132.99px;
 } 
 
+.main {
+    background-color: #fff;
+}
+
 .text-2 {
     width: 891px;
     height: 144px;
@@ -307,6 +312,7 @@ body, html {
     margin-top: 120px;
     width: 1920px;
     height: 485px;
+    background-color: #fff;
  }
  
  .title-2 {
@@ -345,11 +351,11 @@ body, html {
     border-radius: 25px;
 }
 .box-4 {
-display: flex;
-flex-wrap: wrap;
-flex-direction: column;
-align-content: space-between;
-justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: space-between;
+    justify-content: space-between;
 
     margin-top: 0px;
     margin-left: 381px;
@@ -403,7 +409,6 @@ justify-content: space-between;
     height: 886px;
     margin-left: 380px;
     margin-top: 60px;
-    /* border: blue solid 1px; */
 }
 .box-5 {
     
@@ -411,10 +416,7 @@ justify-content: space-between;
     flex-wrap: wrap;
     /* flex-direction: column; */
     justify-content: space-between;      
-
-
 }
-
 
 .img-3 {
     width: 360px;
