--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,11 +14,16 @@ body, html {
     height: 100%;
 }
 .wrapper {
-    width: 1921px;
+    width: 100%;
     height: 100%;
     margin: 0 auto;
-    background-color: #ffffff;
 
+}
+
+.container-wrapper {
+    width: 1921px;
+    margin: 0 auto;
+    background-color: #ffffff;
 }
 .header {
     width: 1920px;
